--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,8 +12,8 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/com_facebook_profilepictureview_preset_size_normal"
+        android:layout_height="@dimen/com_facebook_profilepictureview_preset_size_normal"
         android:id="@+id/imageView2"
         android:layout_gravity="center_horizontal"
         android:src="@android:drawable/sym_def_app_icon" />
@@ -58,16 +58,24 @@
             android:layout_width="wrap_content"
             android:layout_height="3dp"
             android:background="@color/colorPrimary"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/cardview_default_elevation"
+            android:layout_marginStart="@dimen/cardview_default_elevation"
+            android:layout_marginRight="@dimen/cardview_default_elevation"
+            android:layout_marginEnd="@dimen/cardview_default_elevation"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:text="OR"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/colorPrimary"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_gravity="center"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
