--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="greyl">#CCCCCC</color>
+    <color name="greyd">#d7d4d4</color>
+
+    <color name="black">#000000</color>
+
+    <color name="green">#FF4CAF50</color>
+    <color name="dark_green">#388e3c</color>
 </resources>
