--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#4F99FF</color>
+    <color name="colorPrimaryDark">#4F55FF</color>
     <color name="colorAccent">#FF4081</color>
     <color name="greyl">#CCCCCC</color>
     <color name="greyd">#d7d4d4</color>
